feat(i18n): comprehensive translation of the settings page and upcoming title placeholder

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -494,6 +494,7 @@
     "stats.dlcs": "DLCs",
     "stats.titledb_source": "TitleDB Source",
     "stats.genre_distribution": "Genre Distribution",
+    "upcoming.title": "Upcoming Releases",
     "upcoming.search_placeholder": "Search upcoming releases...",
     "upcoming.loading": "Fetching releases from IGDB...",
     "upcoming.none_found": "No upcoming releases found",
@@ -517,5 +518,90 @@
     "wishlist.modal_title": "Search Game to Add",
     "wishlist.search_label": "Search in TitleDB",
     "wishlist.search_placeholder": "Type game name...",
-    "wishlist.search_help": "Type at least 3 characters to search"
+    "wishlist.search_help": "Type at least 3 characters to search",
+    "settings.general_region": "Library Region",
+    "settings.general_lib_lang": "Library Language",
+    "settings.general_app_lang": "App Language",
+    "settings.user_management": "User Management",
+    "settings.permissions": "Permissions",
+    "settings.add_new_user": "Add New User",
+    "settings.username": "Username",
+    "settings.username_placeholder": "Ex: admin",
+    "settings.username_title": "3-20 characters (letters, numbers, _ or -)",
+    "settings.shop_access": "Shop Access",
+    "settings.backup_access": "Backup Access",
+    "settings.admin_access": "Admin Access",
+    "settings.create_account": "Create Account",
+    "settings.keys_valid": "Keys are valid",
+    "settings.keys_missing": "Keys missing",
+    "settings.required_for_id": "Required for identification",
+    "settings.library_locations": "Library Locations",
+    "settings.storage_path": "Storage Path",
+    "settings.add_path": "Add Path",
+    "settings.full_scan": "Full Scan",
+    "settings.titledb_config": "TitleDB Configuration",
+    "settings.titledb_sources": "Sources",
+    "settings.priority_order": "Priority Order",
+    "settings.update_now": "Update Now",
+    "settings.force_full_update": "Force Full Update",
+    "settings.last_update": "Last update:",
+    "settings.shop_config": "Tinfoil Shop Configuration",
+    "settings.shop_hostname": "Hostname or IP",
+    "settings.shop_enable": "Enable Shop (Tinfoil)",
+    "settings.shop_desc": "Enables endpoints for tinfoil in /api/shop",
+    "settings.shop_welcome": "Welcome Message (Tinfoil)",
+    "settings.shop_welcome_placeholder": "Welcome Message",
+    "settings.shop_theme": "Tinfoil Theme",
+    "settings.shop_separate_dlc": "Show DLCs separately",
+    "settings.shop_separate_dlc_desc": "Displays DLCs as separate items in the shop.",
+    "settings.shop_hide_nsfw": "Hide mature games (NSFW)",
+    "settings.auto_metadata_fetch": "Automated Metadata Fetch",
+    "settings.schedule_status": "Schedule Status",
+    "settings.schedule_12h": "2x per day (12h)",
+    "settings.last_execution": "Last Execution",
+    "settings.never_executed": "Never executed",
+    "settings.fetch_now": "Fetch Now",
+    "settings.force_ignore_schedule": "Force (Ignore Schedule)",
+    "settings.bulk_actions": "Bulk Actions",
+    "settings.refresh_all_metadata": "Refresh All Games Metadata",
+    "settings.refresh_all_metadata_desc": "⚠️ This will fetch ratings and play time for all identified items. It may take some time.",
+    "settings.save_config": "Save Settings",
+    "settings.system_maintenance": "System Diagnostics & Maintenance",
+    "settings.quick_actions": "Quick Actions",
+    "settings.reset_jobs": "Reset Jobs & Flags",
+    "settings.reset_redis": "Reset Redis (Queue/Cache)",
+    "settings.reset_jobs_desc": "Use job reset if a scan appears stuck. Redis reset clears all pending tasks in the Celery queue.",
+    "settings.sync_tests": "Sync Tests",
+    "settings.test_titledb_sync": "Test TitleDB Sync (Sync)",
+    "settings.test_titledb_sync_desc": "Runs the TitleDB download and sync algorithm synchronously, returning the immediate result.",
+    "settings.watchdog_desc": "(Automatic file detection)",
+    "settings.celery_queue_status": "Queue Status (Celery)",
+    "settings.loading_status": "Loading status...",
+    "settings.click_refresh_tasks": "Click refresh to see tasks...",
+    "settings.backup_management": "Backup Management",
+    "settings.create_backup": "Create Backup",
+    "settings.backup_desc": "Manage database and configuration backups. Backups are stored locally in the config folder.",
+    "settings.file": "File",
+    "settings.type": "Type",
+    "settings.creation_date": "Creation Date",
+    "settings.cloud_integration": "Cloud Integration",
+    "settings.cloud_deprecated": "The synchronization feature with Google Drive and Dropbox was removed in version 2.2.0 due to obsolescence and maintenance. Use the local backup system and direct file transfer as an alternative.",
+    "settings.config_required_secret": "Configuration required (secret.json not found)",
+    "settings.keep_collection_safe": "Keep your collection safe and accessible",
+    "settings.config_required_appkey": "Configuration required (app_key.txt not found)",
+    "settings.manage_access_tokens": "Manage access tokens for integrations and scripts",
+    "settings.last_use": "Last Use",
+    "settings.token_name": "Token/Application Name",
+    "settings.copy_token_now": "Copy this token now. You will not be able to see it again.",
+    "settings.confirm_reset_jobs": "Do you want to reset all stuck jobs and memory flags?",
+    "settings.confirm_reset_redis": "WARNING: This will clear the entire Redis db and processing queue. Continue?",
+    "settings.titledb_titles": "Titles:",
+    "settings.titledb_cache": "Cache:",
+    "settings.loading_queue_status": "Loading queue status...",
+    "settings.confirm_delete": "Delete %s?",
+    "settings.api_configured": "API successfully configured!",
+    "settings.generated_via_settings": "Generated via Settings at",
+    "settings.no_library_folders": "You haven't added any game folders yet. Add one in the 'Library' menu so search works properly.",
+    "settings.invalid_api_key": "The API key is not valid for Twitch. Check your credentials and allowed domains in the IGDB/Twitch dashboard.",
+    "settings.token_creation_error": "Unexpected error while creating token."
 }
