--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -494,6 +494,7 @@
     "stats.dlcs": "DLCs",
     "stats.titledb_source": "Fuente TitleDB",
     "stats.genre_distribution": "Distribución por Género",
+    "upcoming.title": "Lanzamientos",
     "upcoming.search_placeholder": "Buscar lanzamientos...",
     "upcoming.loading": "Obteniendo lanzamientos de IGDB...",
     "upcoming.none_found": "No se encontraron lanzamientos",
@@ -517,5 +518,90 @@
     "wishlist.modal_title": "Buscar Juego para Añadir",
     "wishlist.search_label": "Buscar en TitleDB",
     "wishlist.search_placeholder": "Escribe nombre del juego...",
-    "wishlist.search_help": "Escribe al menos 3 caracteres para buscar"
+    "wishlist.search_help": "Escribe al menos 3 caracteres para buscar",
+    "settings.general_region": "Región de la Biblioteca",
+    "settings.general_lib_lang": "Idioma de la Biblioteca",
+    "settings.general_app_lang": "Idioma de la Aplicación",
+    "settings.user_management": "Gestión de Usuarios",
+    "settings.permissions": "Permisos",
+    "settings.add_new_user": "Añadir Nuevo Usuario",
+    "settings.username": "Usuario",
+    "settings.username_placeholder": "Ej: admin",
+    "settings.username_title": "3-20 caracteres (letras, números, _ o -)",
+    "settings.shop_access": "Acceso a Tienda",
+    "settings.backup_access": "Acceso a Copias",
+    "settings.admin_access": "Acceso Admin",
+    "settings.create_account": "Crear Cuenta",
+    "settings.keys_valid": "Claves válidas",
+    "settings.keys_missing": "Faltan claves",
+    "settings.required_for_id": "Requerido para identificación",
+    "settings.library_locations": "Ubicaciones de Biblioteca",
+    "settings.storage_path": "Ruta de Almacenamiento",
+    "settings.add_path": "Añadir Ruta",
+    "settings.full_scan": "Escaneo Completo",
+    "settings.titledb_config": "Configuración de TitleDB",
+    "settings.titledb_sources": "Fuentes",
+    "settings.priority_order": "Orden de Prioridad",
+    "settings.update_now": "Actualizar Ahora",
+    "settings.force_full_update": "Forzar Actualización",
+    "settings.last_update": "Última actualización:",
+    "settings.shop_config": "Configuración de Tienda Tinfoil",
+    "settings.shop_hostname": "Hostname o IP",
+    "settings.shop_enable": "Activar Tienda (Tinfoil)",
+    "settings.shop_desc": "Activa endpoints para tinfoil en /api/shop",
+    "settings.shop_welcome": "Mensaje de Bienvenida (Tinfoil)",
+    "settings.shop_welcome_placeholder": "Mensaje de Bienvenida",
+    "settings.shop_theme": "Tema de Tinfoil",
+    "settings.shop_separate_dlc": "Mostrar DLCs por separado",
+    "settings.shop_separate_dlc_desc": "Muestra los DLCs como elementos separados en la tienda.",
+    "settings.shop_hide_nsfw": "Ocultar juegos maduros (NSFW)",
+    "settings.auto_metadata_fetch": "Búsqueda Automática de Metadatos",
+    "settings.schedule_status": "Estado de Programación",
+    "settings.schedule_12h": "2x por día (12h)",
+    "settings.last_execution": "Última Ejecución",
+    "settings.never_executed": "Nunca ejecutado",
+    "settings.fetch_now": "Buscar Ahora",
+    "settings.force_ignore_schedule": "Forzar (Ignorar Previsto)",
+    "settings.bulk_actions": "Acciones en Masa",
+    "settings.refresh_all_metadata": "Actualizar Metadatos de Todos los Juegos",
+    "settings.refresh_all_metadata_desc": "⚠️ Esto buscará notas y tiempo de juego para todos los elementos identificados. Puede tardar un poco.",
+    "settings.save_config": "Guardar Configuración",
+    "settings.system_maintenance": "Diagnóstico y Mantenimiento del Sistema",
+    "settings.quick_actions": "Acciones Rápidas",
+    "settings.reset_jobs": "Restablecer Trabajos y Flags",
+    "settings.reset_redis": "Restablecer Redis (Cola/Caché)",
+    "settings.reset_jobs_desc": "Usa el restablecimiento de trabajos si un escaneo parece atascado. El restablecimiento de Redis borra las tareas en la cola.",
+    "settings.sync_tests": "Pruebas de Sincronización",
+    "settings.test_titledb_sync": "Probar Sincronización TitleDB",
+    "settings.test_titledb_sync_desc": "Ejecuta el algoritmo de sincronización TitleDB de forma síncrona, devolviendo el resultado inmediato.",
+    "settings.watchdog_desc": "(Detección automática de archivos)",
+    "settings.celery_queue_status": "Estado de Cola (Celery)",
+    "settings.loading_status": "Cargando estado...",
+    "settings.click_refresh_tasks": "Haz clic en refrescar para ver las tareas...",
+    "settings.backup_management": "Gestión de Copias de Seguridad",
+    "settings.create_backup": "Crear Copia",
+    "settings.backup_desc": "Gestiona las copias de seguridad de la base de datos. Se almacenan localmente en la carpeta de configuración.",
+    "settings.file": "Archivo",
+    "settings.type": "Tipo",
+    "settings.creation_date": "Fecha de Creación",
+    "settings.cloud_integration": "Integración en la Nube",
+    "settings.cloud_deprecated": "La función de sincronización con Google Drive y Dropbox se eliminó por mantenimiento. Utiliza el sistema de copias local.",
+    "settings.config_required_secret": "Configuración requerida (secret.json no encontrado)",
+    "settings.keep_collection_safe": "Mantén tu colección segura y accesible",
+    "settings.config_required_appkey": "Configuración requerida (app_key.txt no encontrado)",
+    "settings.manage_access_tokens": "Gestiona tokens de acceso para integraciones y scripts",
+    "settings.last_use": "Último Uso",
+    "settings.token_name": "Nombre de Aplicación/Token",
+    "settings.copy_token_now": "Copia este token ahora. No podrás verlo de nuevo.",
+    "settings.confirm_reset_jobs": "¿Deseas restablecer todos los trabajos atascados y flags de memoria?",
+    "settings.confirm_reset_redis": "CUIDADO: Esto limpiará toda la base de datos de Redis y la cola. ¿Continuar?",
+    "settings.titledb_titles": "Títulos:",
+    "settings.titledb_cache": "Caché:",
+    "settings.loading_queue_status": "Cargando estado de la cola...",
+    "settings.confirm_delete": "¿Eliminar %s?",
+    "settings.api_configured": "¡API configurada con éxito!",
+    "settings.generated_via_settings": "Generado vía Configuración en",
+    "settings.no_library_folders": "Aún no has añadido ninguna carpeta de juegos. Añade una en el menú 'Biblioteca' para que la búsqueda funcione.",
+    "settings.invalid_api_key": "La clave API no es válida para Twitch. Verifica tus credenciales y dominios en IGDB/Twitch.",
+    "settings.token_creation_error": "Error inesperado al crear token."
 }
