--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -503,6 +503,7 @@
     "stats.dlcs": "DLCs",
     "stats.titledb_source": "Fonte TitleDB",
     "stats.genre_distribution": "Distribuição por Gênero",
+    "upcoming.title": "Lançamentos",
     "upcoming.search_placeholder": "Buscar lançamentos...",
     "upcoming.loading": "Buscando lançamentos no IGDB...",
     "upcoming.none_found": "Nenhum lançamento encontrado",
@@ -526,5 +527,90 @@
     "wishlist.modal_title": "Buscar Jogo para Adicionar",
     "wishlist.search_label": "Buscar no TitleDB",
     "wishlist.search_placeholder": "Digite o nome do jogo...",
-    "wishlist.search_help": "Digite ao menos 3 caracteres para buscar"
+    "wishlist.search_help": "Digite ao menos 3 caracteres para buscar",
+    "settings.general_region": "Região da Biblioteca",
+    "settings.general_lib_lang": "Idioma da Biblioteca",
+    "settings.general_app_lang": "Idioma da Aplicação",
+    "settings.user_management": "Gerenciamento de Usuários",
+    "settings.permissions": "Permissões",
+    "settings.add_new_user": "Adicionar Novo Usuário",
+    "settings.username": "Usuário",
+    "settings.username_placeholder": "Ex: admin",
+    "settings.username_title": "3-20 caracteres (letras, números, _ ou -)",
+    "settings.shop_access": "Acesso à Shop",
+    "settings.backup_access": "Acesso aos Backups",
+    "settings.admin_access": "Acesso Admin",
+    "settings.create_account": "Criar Conta",
+    "settings.keys_valid": "Keys válidas",
+    "settings.keys_missing": "Keys ausentes",
+    "settings.required_for_id": "Necessárias para identificação",
+    "settings.library_locations": "Locais da Biblioteca",
+    "settings.storage_path": "Caminho de Armazenamento",
+    "settings.add_path": "Adicionar Caminho",
+    "settings.full_scan": "Escanear Biblioteca",
+    "settings.titledb_config": "Configuração do TitleDB",
+    "settings.titledb_sources": "Fontes",
+    "settings.priority_order": "Ordem de Prioridade",
+    "settings.update_now": "Atualizar Agora",
+    "settings.force_full_update": "Forçar Atualização Completa",
+    "settings.last_update": "Última atualização:",
+    "settings.shop_config": "Configuração da Loja (Tinfoil)",
+    "settings.shop_hostname": "Hostname ou IP",
+    "settings.shop_enable": "Ativar Loja (Tinfoil)",
+    "settings.shop_desc": "Ativa endpoints para o tinfoil em /api/shop",
+    "settings.shop_welcome": "Mensagem de Boas-vindas (Tinfoil)",
+    "settings.shop_welcome_placeholder": "Mensagem de boas-vindas",
+    "settings.shop_theme": "Tema do Tinfoil",
+    "settings.shop_separate_dlc": "Mostrar DLCs separadamente",
+    "settings.shop_separate_dlc_desc": "Exibe as DLCs como itens separados na loja.",
+    "settings.shop_hide_nsfw": "Ocultar jogos maduros (NSFW)",
+    "settings.auto_metadata_fetch": "Busca Automática de Metadados",
+    "settings.schedule_status": "Status de Agendamento",
+    "settings.schedule_12h": "2x por dia (12h)",
+    "settings.last_execution": "Última Execução",
+    "settings.never_executed": "Nunca executado",
+    "settings.fetch_now": "Buscar Agora",
+    "settings.force_ignore_schedule": "Forçar (Ignorar Agendamento)",
+    "settings.bulk_actions": "Ações em Massa",
+    "settings.refresh_all_metadata": "Atualizar Metadados de Todos os Jogos",
+    "settings.refresh_all_metadata_desc": "⚠️ Isso buscará notas e tempo de jogo para todos os itens identificados. Pode levar tempo.",
+    "settings.save_config": "Salvar Configurações",
+    "settings.system_maintenance": "Diagnóstico e Manutenção do Sistema",
+    "settings.quick_actions": "Ações Rápidas",
+    "settings.reset_jobs": "Resetar Jobs & Flags",
+    "settings.reset_redis": "Resetar Redis (Fila/Cache)",
+    "settings.reset_jobs_desc": "Use o reset de jobs se o scan parecer travado. O reset do Redis limpa todas as tarefas pendentes na fila Celery.",
+    "settings.sync_tests": "Testes de Sincronismo",
+    "settings.test_titledb_sync": "Testar Sync TitleDB (Sync)",
+    "settings.test_titledb_sync_desc": "Executa o algoritmo de download e sincronização do TitleDB de forma síncrona, retornando o resultado imediato.",
+    "settings.watchdog_desc": "(Detecção automática de arquivos)",
+    "settings.celery_queue_status": "Status da Fila (Celery)",
+    "settings.loading_status": "Carregando status...",
+    "settings.click_refresh_tasks": "Clique em atualizar para ver as tarefas...",
+    "settings.backup_management": "Gerenciamento de Backups",
+    "settings.create_backup": "Criar Backup",
+    "settings.backup_desc": "Gerencie os backups do banco de dados e configurações. Os backups são armazenados localmente na pasta de configuração.",
+    "settings.file": "Arquivo",
+    "settings.type": "Tipo",
+    "settings.creation_date": "Data de Criação",
+    "settings.cloud_integration": "Integração Cloud",
+    "settings.cloud_deprecated": "O recurso de sincronização com Google Drive e Dropbox foi removido na versão 2.2.0 devido a obsolescência e manutenção. Use o sistema de backups local e transferência de arquivos direta como alternativa.",
+    "settings.config_required_secret": "Configuração necessária (secret.json não encontrado)",
+    "settings.keep_collection_safe": "Mantenha seu acervo seguro e acessível",
+    "settings.config_required_appkey": "Configuração necessária (app_key.txt não encontrado)",
+    "settings.manage_access_tokens": "Gerencie tokens de acesso para integrações e scripts",
+    "settings.last_use": "Último Uso",
+    "settings.token_name": "Nome do Token/Aplicação",
+    "settings.copy_token_now": "Copie este token agora. Você não poderá vê-lo novamente.",
+    "settings.confirm_reset_jobs": "Deseja resetar todos os jobs travados e as flags de memória?",
+    "settings.confirm_reset_redis": "CUIDADO: Isso irá limpar todo o banco do Redis e a fila de processamento. Continuar?",
+    "settings.titledb_titles": "Títulos:",
+    "settings.titledb_cache": "Cache:",
+    "settings.loading_queue_status": "Carregando status da fila...",
+    "settings.confirm_delete": "¿Excluir %s?",
+    "settings.api_configured": "API configurada com sucesso!",
+    "settings.generated_via_settings": "Gerado via Configurações em",
+    "settings.no_library_folders": "Você ainda não adicionou nenhuma pasta de jogos. Adicione uma no menu 'Biblioteca' para que a busca funcione corretamente.",
+    "settings.invalid_api_key": "A API key não é válida para a Twitch. Verifique suas credenciais e os domínios permitidos na dashboard do IGDB/Twitch.",
+    "settings.token_creation_error": "Erro inesperado ao criar token."
 }
