feat(i18n): translation of remaining sections in settings (Errors, Tags, Activity, APIs, Tokens, Plugins)

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -603,5 +603,52 @@
     "settings.generated_via_settings": "Generated via Settings at",
     "settings.no_library_folders": "You haven't added any game folders yet. Add one in the 'Library' menu so search works properly.",
     "settings.invalid_api_key": "The API key is not valid for Twitch. Check your credentials and allowed domains in the IGDB/Twitch dashboard.",
-    "settings.token_creation_error": "Unexpected error while creating token."
+    "settings.token_creation_error": "Unexpected error while creating token.",
+    "settings.error_log": "Error Log",
+    "settings.error_monitoring_desc": "Monitoring of failures and system issues",
+    "settings.error_occurred": "Occurred",
+    "settings.module": "Module",
+    "settings.message": "Message",
+    "settings.details": "Details",
+    "settings.no_errors_recorded": "No errors recorded",
+    "settings.tags_management": "Tag Management",
+    "settings.tags_desc": "Organize your library with tags (e.g. 8-bits, 4-players)",
+    "settings.new_tag": "New Tag",
+    "settings.tag": "Tag",
+    "settings.color": "Color",
+    "settings.linked_games": "Linked Games",
+    "settings.add_tag": "Add Tag",
+    "settings.activity_history": "Activity History",
+    "settings.activity_desc": "Library interaction logs",
+    "settings.all_activities": "All activities",
+    "settings.favorited": "Favorited",
+    "settings.played": "Played",
+    "settings.hidden": "Hidden",
+    "settings.downloaded": "Downloaded",
+    "settings.action": "Action",
+    "settings.game": "Game",
+    "settings.external_apis": "External APIs",
+    "settings.external_apis_desc": "Settings for third-party services integration for metadata and extra features.",
+    "settings.igdb_api_desc": "The IGDB API is used to fetch game metadata not recognized by TitleDB, screenshots, rich info and to populate the <strong>Upcoming Releases</strong> page.",
+    "settings.igdb_how_to_get_key": "If you don't have a Twitch/IGDB key:",
+    "settings.igdb_guide_link": "Click here to generate your IGDB API keys",
+    "settings.test_connection": "Test Connection",
+    "settings.testing": "Testing...",
+    "settings.save_and_restart": "Save credentials and restart integration",
+    "settings.plugins_installed": "Installed Plugins",
+    "settings.plugins_desc": "Plugins allow extending MyFoil functionality with custom features.",
+    "settings.plugins_install_desc": "To install new plugins, add them to the folder",
+    "settings.api_tokens": "API Tokens",
+    "settings.api_tokens_desc": "Authentication for scripts and external integrations",
+    "settings.api_tokens_usage": "Remember: To use the API pass the token in the header:",
+    "settings.created_at": "Created at",
+    "settings.new_api_token": "New API Token",
+    "settings.token_generated_success": "Token Successfully Generated!",
+    "settings.generate_token": "Generate Token",
+    "settings.confirm_clear_errors": "Do you want to clear the entire error log?",
+    "settings.error_deleted": "Error deleted",
+    "settings.logs_cleared": "Logs successfully cleared",
+    "settings.error_validating": "Error validating:",
+    "settings.status_active": "Active",
+    "settings.status_inactive": "Missing/Inactive"
 }
