--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -603,5 +603,52 @@
     "settings.generated_via_settings": "Generado vía Configuración en",
     "settings.no_library_folders": "Aún no has añadido ninguna carpeta de juegos. Añade una en el menú 'Biblioteca' para que la búsqueda funcione.",
     "settings.invalid_api_key": "La clave API no es válida para Twitch. Verifica tus credenciales y dominios en IGDB/Twitch.",
-    "settings.token_creation_error": "Error inesperado al crear token."
+    "settings.token_creation_error": "Error inesperado al crear token.",
+    "settings.error_log": "Registro de Errores",
+    "settings.error_monitoring_desc": "Monitoreo de fallos y problemas del sistema",
+    "settings.error_occurred": "Ocurrió",
+    "settings.module": "Módulo",
+    "settings.message": "Mensaje",
+    "settings.details": "Detalles",
+    "settings.no_errors_recorded": "No hay errores registrados",
+    "settings.tags_management": "Gestión de Etiquetas",
+    "settings.tags_desc": "Organiza tu biblioteca con etiquetas (ej: 8-bits, 4-players)",
+    "settings.new_tag": "Nueva Etiqueta",
+    "settings.tag": "Etiqueta",
+    "settings.color": "Color",
+    "settings.linked_games": "Juegos Vinculados",
+    "settings.add_tag": "Añadir Etiqueta",
+    "settings.activity_history": "Historial de Actividad",
+    "settings.activity_desc": "Registros de interacciones en la biblioteca",
+    "settings.all_activities": "Todas las actividades",
+    "settings.favorited": "Favoritos",
+    "settings.played": "Jugados",
+    "settings.hidden": "Ocultos",
+    "settings.downloaded": "Descargados",
+    "settings.action": "Acción",
+    "settings.game": "Juego",
+    "settings.external_apis": "APIs Externas",
+    "settings.external_apis_desc": "Configuraciones de integración con servicios de terceros para metadatos y funciones extras.",
+    "settings.igdb_api_desc": "La API de IGDB se usa para buscar metadatos no reconocidos por TitleDB, capturas y pantalla y poblar la página de <strong>Lanzamientos</strong>.",
+    "settings.igdb_how_to_get_key": "Si no tienes una clave de Twitch/IGDB:",
+    "settings.igdb_guide_link": "Haz clic aquí para generar claves API de IGDB",
+    "settings.test_connection": "Probar Conexión",
+    "settings.testing": "Probando...",
+    "settings.save_and_restart": "Guardar credenciales y reiniciar integración",
+    "settings.plugins_installed": "Plugins Instalados",
+    "settings.plugins_desc": "Los Plugins permiten extender la funcionalidad de MyFoil con características personalizadas.",
+    "settings.plugins_install_desc": "Para instalar nuevos plugins, añádelos en la carpeta",
+    "settings.api_tokens": "Tokens de API",
+    "settings.api_tokens_desc": "Autenticación para scripts e integraciones externas",
+    "settings.api_tokens_usage": "Recuerda: Para usar la API pasa el token en el header:",
+    "settings.created_at": "Creado en",
+    "settings.new_api_token": "Nuevo Token de API",
+    "settings.token_generated_success": "¡Token Generado con Éxito!",
+    "settings.generate_token": "Generar Token",
+    "settings.confirm_clear_errors": "¿Deseas vaciar todo el registro de errores?",
+    "settings.error_deleted": "Error eliminado",
+    "settings.logs_cleared": "Registros borrados con éxito",
+    "settings.error_validating": "Error validando:",
+    "settings.status_active": "Activa",
+    "settings.status_inactive": "Ausente/Inactiva"
 }
