--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -612,5 +612,52 @@
     "settings.generated_via_settings": "Gerado via Configurações em",
     "settings.no_library_folders": "Você ainda não adicionou nenhuma pasta de jogos. Adicione uma no menu 'Biblioteca' para que a busca funcione corretamente.",
     "settings.invalid_api_key": "A API key não é válida para a Twitch. Verifique suas credenciais e os domínios permitidos na dashboard do IGDB/Twitch.",
-    "settings.token_creation_error": "Erro inesperado ao criar token."
+    "settings.token_creation_error": "Erro inesperado ao criar token.",
+    "settings.error_log": "Log de Erros",
+    "settings.error_monitoring_desc": "Monitoramento de falhas e problemas no sistema",
+    "settings.error_occurred": "Ocorreu",
+    "settings.module": "Módulo",
+    "settings.message": "Mensagem",
+    "settings.details": "Detalhes",
+    "settings.no_errors_recorded": "Nenhum erro registrado",
+    "settings.tags_management": "Gerenciamento de Tags",
+    "settings.tags_desc": "Organize sua biblioteca com tags (ex: 8-bits, 4-players)",
+    "settings.new_tag": "Nova Tag",
+    "settings.tag": "Tag",
+    "settings.color": "Cor",
+    "settings.linked_games": "Jogos vinculados",
+    "settings.add_tag": "Adicionar Tag",
+    "settings.activity_history": "Histórico de Atividade",
+    "settings.activity_desc": "Registros de interações na biblioteca",
+    "settings.all_activities": "Todas as atividades",
+    "settings.favorited": "Favoritados",
+    "settings.played": "Jogados",
+    "settings.hidden": "Escondidos",
+    "settings.downloaded": "Baixados",
+    "settings.action": "Ação",
+    "settings.game": "Jogo",
+    "settings.external_apis": "APIs Externas",
+    "settings.external_apis_desc": "Configurações de integração com serviços de terceiros para metadados e funcionalidades extras.",
+    "settings.igdb_api_desc": "A API do IGDB é usada para buscar metadados de jogos não reconhecidos pelo TitleDB, screenshots, informações ricas e para popular a página de <strong>Lançamentos</strong>.",
+    "settings.igdb_how_to_get_key": "Se você não possui uma chave da Twitch/IGDB:",
+    "settings.igdb_guide_link": "Clique aqui para gerar suas chaves API do IGDB",
+    "settings.test_connection": "Testar Conexão",
+    "settings.testing": "Testando...",
+    "settings.save_and_restart": "Salvar credenciais e reiniciar integração",
+    "settings.plugins_installed": "Plugins Instalados",
+    "settings.plugins_desc": "Plugins permitem estender a funcionalidade do MyFoil com recursos personalizados.",
+    "settings.plugins_install_desc": "Para instalar novos plugins, adicione-os na pasta",
+    "settings.api_tokens": "Tokens de API",
+    "settings.api_tokens_desc": "Autenticação para scripts e integrações externas",
+    "settings.api_tokens_usage": "Lembre-se: Para usar a API passe o token no header:",
+    "settings.created_at": "Criado em",
+    "settings.new_api_token": "Novo Token de API",
+    "settings.token_generated_success": "Token Gerado com Sucesso!",
+    "settings.generate_token": "Gerar Token",
+    "settings.confirm_clear_errors": "Deseja esvaziar todo o log de erros?",
+    "settings.error_deleted": "Erro excluído",
+    "settings.logs_cleared": "Logs zerados com sucesso",
+    "settings.error_validating": "Erro ao validar:",
+    "settings.status_active": "Ativa",
+    "settings.status_inactive": "Ausente/Inativa"
 }
